# lhe_analyser

./: .gitignore  README.md  config.yaml  lhe_analysis.py  pyproject.toml  setup.sh
lhe-files/NP21_ODD/: crossx.html  index.html
lhe-files/NP21_ODD/Events/run_01/: run_01_tag_1_banner.txt
lhe-files/NP21_ODD/Events/run_02/: run_02_tag_1_banner.txt
lhe-files/NP21_ODD/HTML/: info.html  results.pkl
lhe-files/NP21_ODD/HTML/run_01/: results.html
lhe-files/NP21_ODD/HTML/run_02/: results.html
lhe-files/NP21_ODD/Source/: maxamps.inc  param_card.inc
lhe-files/NP21_ODD/Source/DHELAS/: FFS1_3.f  FFS2_3.f  FFV1P1N_1.f  FFV1P1N_2.f  FFV1P1N_3.f  FFV1_0.f  FFV1_3.f  FFV3P1N_1.f  FFV3P1N_2.f  FFV3P1N_3.f  FFV3_3.f  VVS3P1N_3.f  VVS4P1N_1.f  VVS4P1N_2.f  VVS4P1N_3.f  VVS4_0.f  aloha_file.inc
lhe-files/NP21_ODD/Source/MODEL/: coupl_write.inc  couplings1.f  input.inc  intparam_definition.inc  param_write.inc
lhe-files/NP21_ODD/SubProcesses/: proc_characteristics  subproc.mg
lhe-files/NP21_ODD/SubProcesses/P1_qq_bbxll/: ajob1  ajob2  ajob3  auto_dsig.f  auto_dsig1.f  (+19 more)
lhe-files/NP22_ODD/: crossx.html  index.html
lhe-files/NP22_ODD/HTML/: info.html  results.pkl
lhe-files/NP22_ODD/Source/: run_card.inc
lhe-files/NP22_ODD/SubProcesses/: coupl.inc  proc_characteristics
lhe-files/SM/: crossx.html  index.html
lhe-files/SM/Cards/: me5_configuration.txt
lhe-files/SM/HTML/: info.html  results.pkl
lhe-files/SM/Source/: coupl.inc  make_opts  maxconfigs.inc  run_card.inc
lhe-files/SM/SubProcesses/: proc_characteristics
lhe_analyser/: __init__.py  lhe_analysis.py
(+972 files in other folders)
